--- a/theFinalCountdown/Base.lproj/Main.storyboard
+++ b/theFinalCountdown/Base.lproj/Main.storyboard
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8Xc-FA-NWb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8Xc-FA-NWb">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller - Timer-->
+        <!--Timer-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="FISViewController" sceneMemberID="viewController">
@@ -16,62 +19,96 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5g-VY-d7z">
-                                <rect key="frame" x="70" y="332" width="33" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Start">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G61-zh-9P3">
-                                <rect key="frame" x="209" y="332" width="43" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Pause">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0q-ZD-j8N">
+                            <datePicker contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="countDownTimer" minuteInterval="1" useCurrentDate="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0q-ZD-j8N">
                                 <rect key="frame" x="0.0" y="63" width="320" height="162"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="426600068.10878801">
                                     <!--2014-07-09 12:01:08 +0000-->
                                 </date>
-                                <timeZone key="timeZone" name="America/Los_Angeles">
-                                    <data key="data">
-VFppZgAAAAAAAAAAAAAAAAAAAAAAAAAEAAAABAAAAAAAAAC5AAAABAAAABCepkign7sVkKCGKqChmveQ
-y4kaoNIj9HDSYSYQ1v50INiArZDa/tGg28CQENzes6DdqayQ3r6VoN+JjpDgnneg4WlwkOJ+WaDjSVKQ
-5F47oOUpNJDmR1gg5xJREOgnOiDo8jMQ6gccIOrSFRDr5v4g7LH3EO3G4CDukdkQ76/8oPBxuxDxj96g
-8n/BkPNvwKD0X6OQ9U+ioPY/hZD3L4Sg+CiiEPkPZqD6CIQQ+viDIPvoZhD82GUg/chIEP64RyD/qCoQ
-AJgpIAGIDBACeAsgA3EokARhJ6AFUQqQBkEJoAcw7JAHjUOgCRDOkAmtvyAK8LCQC+CvoAzZzRANwJGg
-DrmvEA+priAQmZEQEYmQIBJ5cxATaXIgFFlVEBVJVCAWOTcQFyk2IBgiU5AZCRggGgI1kBryNKAb4heQ
-HNIWoB3B+ZAesfigH6HbkCB2KyAhgb2QIlYNICNq2hAkNe8gJUq8ECYV0SAnKp4QJ/7toCkKgBAp3s+g
-KupiECu+saAs036QLZ6ToC6zYJAvfnWgMJNCkDFnkiAycySQM0d0IDRTBpA1J1YgNjLokDcHOCA4HAUQ
-OOcaIDn75xA6xvwgO9vJEDywGKA9u6sQPo/6oD+bjRBAb9ygQYSpkEJPvqBDZIuQRC+goEVEbZBF89Mg
-Ry2KEEfTtSBJDWwQSbOXIErtThBLnLOgTNZqkE18laBOtkyQT1x3oFCWLpBRPFmgUnYQkFMcO6BUVfKQ
-VPwdoFY11JBW5TogWB7xEFjFHCBZ/tMQWqT+IFvetRBchOAgXb6XEF5kwiBfnnkQYE3eoGGHlZBiLcCg
-Y2d3kGQNoqBlR1mQZe2EoGcnO5BnzWagaQcdkGmtSKBq5v+Qa5ZlIGzQHBBtdkcgbq/+EG9WKSBwj+AQ
-cTYLIHJvwhBzFe0gdE+kEHT/CaB2OMCQdt7roHgYopB4vs2gefiEkHqer6B72GaQfH6RoH24SJB+XnOg
-f5gqkAABAAECAwEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
-AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
-AQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEAAQABAAEA
-AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
-</data>
-                                </timeZone>
                             </datePicker>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="5:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACg-uO-YjG">
-                                <rect key="frame" x="0.0" y="63" width="320" height="156"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="195"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXk-IX-F6E">
+                                <rect key="frame" x="0.0" y="284" width="320" height="284"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e5g-VY-d7z">
+                                        <rect key="frame" x="53" y="70" width="69" height="40"/>
+                                        <state key="normal" title="Start">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="startButtonTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="o6o-fm-ls1"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mAb-bd-8kM">
+                                        <rect key="frame" x="53" y="70" width="69" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="69" id="1cI-en-ANN"/>
+                                        </constraints>
+                                        <state key="normal" title="Cancel">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cancelButtonTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="heQ-xm-rYX"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G61-zh-9P3">
+                                        <rect key="frame" x="226" y="75" width="43" height="30"/>
+                                        <state key="normal" title="Pause">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="pauseButtonTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="AZG-c0-oyP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.5"/>
+                                <constraints>
+                                    <constraint firstItem="G61-zh-9P3" firstAttribute="baseline" secondItem="e5g-VY-d7z" secondAttribute="baseline" id="0rM-0c-ItY"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="baseline" secondItem="e5g-VY-d7z" secondAttribute="baseline" id="377-Z8-v7z"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="trailing" secondItem="e5g-VY-d7z" secondAttribute="trailing" id="Ax7-Wn-UpN"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="height" secondItem="ZXk-IX-F6E" secondAttribute="width" multiplier="0.25" id="BXY-6I-JX0"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="leading" secondItem="e5g-VY-d7z" secondAttribute="leading" id="MQ4-qc-JxS"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="top" secondItem="ZXk-IX-F6E" secondAttribute="top" constant="70" id="OFy-Lg-NrO"/>
+                                    <constraint firstItem="e5g-VY-d7z" firstAttribute="height" secondItem="ZXk-IX-F6E" secondAttribute="width" multiplier="0.25" id="Zrv-8u-Obk"/>
+                                    <constraint firstItem="mAb-bd-8kM" firstAttribute="leading" secondItem="ZXk-IX-F6E" secondAttribute="leading" constant="53" id="iME-ke-XE0"/>
+                                    <constraint firstItem="G61-zh-9P3" firstAttribute="width" secondItem="ZXk-IX-F6E" secondAttribute="width" multiplier="0.25" id="uKJ-Hw-FLQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="G61-zh-9P3" secondAttribute="trailing" constant="51" id="w9h-U2-3zs"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="5:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ACg-uO-YjG">
+                                <rect key="frame" x="0.0" y="69" width="320" height="156"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="100"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" multiplier="0.5" id="4pR-Tw-h9d"/>
+                            <constraint firstItem="ACg-uO-YjG" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" multiplier="0.25" id="Ehl-8k-jOR"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="HNY-DO-vpm"/>
+                            <constraint firstItem="ACg-uO-YjG" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="Lgh-zz-a5b"/>
+                            <constraint firstItem="t0q-ZD-j8N" firstAttribute="height" secondItem="kh9-bI-dsS" secondAttribute="height" multiplier="0.25" id="QmV-sF-KaX"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ZXk-IX-F6E" secondAttribute="bottom" id="S8G-jj-fiE"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="top" secondItem="ACg-uO-YjG" secondAttribute="bottom" constant="64" id="SbT-t4-sXc"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="leading" secondItem="ACg-uO-YjG" secondAttribute="leading" id="THs-of-Dny"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="leading" secondItem="t0q-ZD-j8N" secondAttribute="leading" id="Tok-8z-VwH"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="trailing" secondItem="ACg-uO-YjG" secondAttribute="trailing" id="Uus-yE-SU2"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="YL3-bk-rRi"/>
+                            <constraint firstItem="ZXk-IX-F6E" firstAttribute="top" secondItem="t0q-ZD-j8N" secondAttribute="bottom" constant="59" id="ikw-gv-89h"/>
+                            <constraint firstItem="t0q-ZD-j8N" firstAttribute="width" secondItem="kh9-bI-dsS" secondAttribute="width" id="kbl-Xo-HXl"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Timer" id="GXH-0Z-DV3"/>
+                    <connections>
+                        <outlet property="cancelLabel" destination="mAb-bd-8kM" id="9CL-Aj-aEJ"/>
+                        <outlet property="datePickerLabel" destination="t0q-ZD-j8N" id="yex-K4-5w5"/>
+                        <outlet property="pauseLabel" destination="G61-zh-9P3" id="PLg-WT-xSI"/>
+                        <outlet property="startLabel" destination="e5g-VY-d7z" id="VW5-rR-XfW"/>
+                        <outlet property="timeLabel" destination="ACg-uO-YjG" id="DW1-wW-pmJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="820" y="124"/>
+            <point key="canvasLocation" x="1033" y="129"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2D5-GC-0uk">
@@ -92,9 +129,4 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
             <point key="canvasLocation" x="282" y="129"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
 </document>
